# sand

./: CMakeLists.txt  linmath.h  main.c  shader.c  shader.h
assets/: sand.rc
